--- a/src/components/articles/trending/AllArticles.css
+++ b/src/components/articles/trending/AllArticles.css
@@ -36,18 +36,15 @@
 }
 
 .search-bar input:focus {
-    font-weight: 700;
     border-width: 3px;
 }
 
 .search-bar input::placeholder{
-    font-weight: normal;
     transition: all .3s ease-in-out;
     color: var(--accent)
 }
 .search-bar input:focus::placeholder {
     color: transparent;
-    font-weight: normal;
 }
 
 .search-bar .fa{
@@ -75,6 +72,16 @@
     transform: translateX(50%);
 }
 
+.no-results {
+    width: 100%;
+    font-size: 1.5rem;
+    margin-top: 25%;
+    margin-bottom: 20%;
+    text-align: center;
+    color: var(--accent);
+    z-index: 3;
+}
+
 @media all and (max-width: 820px) {
     .trending-list{
         flex-direction: column;
@@ -95,5 +102,12 @@
 
     .search-bar .fa {
         margin-top: 20px
+    }
+
+    .no-results{
+        background-color: var(--primary);
+        margin: 0;
+        padding: 10px
+
     }
 }
