--- a/src/components/articles/ArticlesCarousel.css
+++ b/src/components/articles/ArticlesCarousel.css
@@ -4,7 +4,7 @@
     justify-content: center;
     position: relative;
     width: 100%;
-    height: 700px;
+    height: 760px;
     background-image: url("../../static/cover-opacity.webp");
     background-size: cover;
     background-color: var(--primary);
@@ -44,6 +44,10 @@
 .left {
     transform: scale(0.5);
     opacity: 0.5;
+}
+
+#arrow-left {
+    margin: 0;
 }
 
 @media screen and (max-width: 820px) {
