--- a/src/components/articles/article-card/ArticleCard.css
+++ b/src/components/articles/article-card/ArticleCard.css
@@ -18,7 +18,7 @@
 .image-wrapper {
     width: 80%;
     max-width: 80%;
-    max-height: 340px;
+    max-height: 200px;
     overflow: hidden;
     display: flex;
     justify-content: center;
@@ -45,9 +45,10 @@
 }
 
 .card-data{
+    position: absolute;
+    transform: translate(0, -25%);
     padding: 3%;
-    background-color: var(--primary);
-    width: 74%;
+    width: 75%;
     max-height: 150px;
 }
 
@@ -72,9 +73,13 @@
     color: var(--primary);
 }
 
+.card-date {
+    color: white;
+}
+
 @media screen and (max-width: 820px) {
     .image-wrapper{
-        max-height: 310px;
+        max-height: 120px;
     }
     .article-card{
         height: 400px;
