--- a/src/components/comment-section/commentSection.css
+++ b/src/components/comment-section/commentSection.css
@@ -119,7 +119,12 @@
 
 @media all and (max-width: 820px) {
     .comment-container {
-        width: 85%;
+        width: 100%;
+    }
+
+    .comment-body {
+        width: 100%;
+        margin: 0;
     }
 
     .comments-title {
