--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -6,10 +6,11 @@
     font-size: 12px;
     height: var(--footer-height);
 }
-.footer .fa{
+.footer .fa-brands{
     width: 20px;
     height: 50px;
     color: black;
+    margin: 10px;
 }
 .z-index-920{
     z-index: 920;
@@ -110,7 +111,7 @@
 }
 
 @media screen and (max-width: 820px) {
-    .footer .fa {
+    .footer .fa-brands {
         height: 100%;
     }
     .social {
