--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -18,7 +18,7 @@
     height: 600px;
     left: 0;
     top: 0;
-    background-image: url("../../static/cover.webp");
+    background-image: url("https://drive.google.com/uc?id=1eEeOi4JeWmqVKkzqgakhtwtCCpN28bmN");
     background-size: cover;
     background-color: var(--primary);
     background-position: center;
@@ -89,6 +89,22 @@
     align-items: center;
 }
 
+.all-products-link {
+    margin-top: 30px;
+    margin-bottom: 50px;
+    font-size: 2em;
+    color: var(--primary);
+    cursor: pointer
+}
+
+.center-arrow {
+    transform: translate(50%, 12%);
+    transition: all ease-in-out 0.3s;
+}
+
+.all-products-link:hover .center-arrow{
+    transform: translate(100%, 12%);
+}
 
 @media screen and (max-width: 820px) {
     .cover {
